--- a/ReactJS/socialapp/src/components/posts/Post.css
+++ b/ReactJS/socialapp/src/components/posts/Post.css
@@ -1,3 +1,4 @@
+
 .single-pic {
 	margin: 10px 0;
 }
@@ -5,10 +6,10 @@
 .photo-img {
 	height: 220px;
 }
-
+/* 
 .post-container {
 	width: 400px;
-}
+} */
 
 .spinner-wrapper {
 	margin: 50px 0;
