social app to add signup login

--- a/ReactJS/socialapp/src/components/home/Home.css
+++ b/ReactJS/socialapp/src/components/home/Home.css
@@ -34,6 +34,11 @@
 	opacity: 0.6;
 }
 
-.chat-list-item {
+.member-list-item, .chat-list-item {
 	text-align: left;
 }
+
+.member-list-item.inactive {
+	opacity: 0.6;
+}
+
