--- a/ReactJS/newsappredux/src/components/newsList/NewsList.css
+++ b/ReactJS/newsappredux/src/components/newsList/NewsList.css
@@ -13,3 +13,15 @@
 .single-news .card-text {
 	height: 90px;
 }
+
+.spinner-wrapper {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	height: 50vh;
+}
+
+.alert-error {
+	margin: 20px auto;
+	width: 20em;
+}
